checking is now done in the pre-pass that identifies capturing groups. This has 
reduced the amount of duplication and made the code tidier. While doing this, 
some minor bugs and Perl incompatibilities were fixed, including:

  (a) \Q\E in the middle of a quantifier such as A+\Q\E+ is now ignored instead
      of giving an invalid quantifier error.
  (b) {0} can now be used after a group in a lookbehind assertion; previously
      this caused an "assertion is not fixed length" error.
  (c) Perl always treats (?(DEFINE) as a "define" group, even if a group with 
      the name "DEFINE" exists. PCRE2 now does likewise.
  (d) A recursion condition test such as (?(R2)...) must now refer to an 
      existing subpattern.
  (e) A conditional recursion test such as (?(R)...) misbehaved if there was a 
      group whose name began with "R".
       
One effect of the refactoring is that some error numbers and messages have 
changed, and the pattern offset given for compiling errors is not always the
right-most character that has been read. In particular, for a variable-length
lookbehind assertion it now points to the start of the assertion. Another
change is that when a callout appears before a group, the "length of next
pattern item" that is passed now just gives the length of the opening
parenthesis item, not the length of the whole group. A length of zero is now
given only for a callout at the end of the pattern. Automatic callouts are no 
longer inserted before and after explicit callouts in the pattern.

Some bugs in the refactored code were subsequently fixed before release:

  (a) An overall recursion such as (?0) inside a lookbehind assertion was not
      being diagnosed as an error.

  (b) In utf mode, the length of a *MARK (or other verb) name was being checked
      in characters instead of code units, which could lead to bad code being 
      compiled, leading to unpredictable behaviour. 
      